--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -41,6 +41,7 @@
           [(ngModel)]="userData.Birthday"
           type="date"
           name="Birthday"
+          required
         >
       </mat-form-field>
       <mat-card-actions>
