--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,9 +1,12 @@
-<div style="position: fixed; top: 20px; right: 20px; z-index: 1000;">
+<div style="position: fixed; top: 20px; right: 20px; z-index: 1000; display: flex; gap: 10px;">
+  <button mat-raised-button (click)="toggleFavoritesFilter()" color="accent">
+    {{ showFavoritesOnly ? 'Show All Movies' : 'Show My Favorites' }}
+  </button>
   <button mat-raised-button (click)="myProfile()" color="primary">My Profile</button>
 </div>
 
 <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 20px; margin-top: 60px;">
-  <mat-card *ngFor="let movie of movies" style="flex: 1 1 300px; max-width: 400px; margin: 10px;">
+  <mat-card *ngFor="let movie of filteredMovies" style="flex: 1 1 300px; max-width: 400px; margin: 10px;">
     <mat-card-header>
       <mat-card-title>{{ movie.Title }}</mat-card-title>
       <mat-card-subtitle>Directed by: {{ movie.Director.Name }}</mat-card-subtitle>
@@ -19,8 +22,20 @@
       <button mat-button color="primary" (click)="openDialog('Synopsis', '', movie.Description)">
         Synopsis
       </button>
-      <mat-icon *ngIf="!isFavorite(movie._id)" (click)="addToFavorites(movie._id)">favorite_border</mat-icon>
-      <mat-icon *ngIf="isFavorite(movie._id)" (click)="removeFromFavorites(movie._id)">favorite</mat-icon>
+      <mat-icon
+        *ngIf="!isFavorite(movie._id)"
+        (click)="addToFavorites(movie._id)"
+        [ngClass]="{'favorite-black': isFavorite(movie._id)}"
+      >
+        favorite_border
+      </mat-icon>
+      <mat-icon
+        *ngIf="isFavorite(movie._id)"
+        (click)="removeFromFavorites(movie._id)"
+        [ngClass]="{'favorite-black': isFavorite(movie._id)}"
+      >
+        favorite
+      </mat-icon>
     </mat-card-actions>
   </mat-card>
 </div>
